// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rencer Expenses summary with 1 expense 1`] = `
<div>
  <h1>
    viewing
    1
     
    expenses
    totalling
    $2.35
  </h1>
</div>
`;

exports[`should rencer Expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    viewing
    20
     
    expenses
    totalling
    $321,654,123,465,875.44
  </h1>
</div>
`;
